# mcp

dice-roller-mcp/: README.md  claude_desktop_config.json  dice-roller.py  pyproject.toml
lowes-mcp/mac-notification-mcp/: EXAMPLE_USAGE.md  README.md  install.sh  pyproject.toml  test_notification.py
lowes-mcp/mac-notification-mcp/src/: console_log_server.py  notification_server.py
mark-prompts/: main.py  prompts.py  pyproject.toml
price-mcp/: .env  claude_desktop_config.json  price.py  pyproject.toml
