[project]
name = "mcp-server-mac-notification"
version = "1.0.0"
description = "A Model Context Protocol server for sending macOS notifications"
requires-python = ">=3.7"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "ruff>=0.8.1"
] 